--- a/ResLifeToolkit/app/src/main/res/layout/programming_list_item.xml
+++ b/ResLifeToolkit/app/src/main/res/layout/programming_list_item.xml
@@ -5,7 +5,7 @@
 
     <TextView
         android:id="@+id/formTitleTV"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
@@ -15,7 +15,7 @@
         android:textSize="24sp" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical">
