--- a/ResLifeToolkit/app/src/main/res/layout/general_form.xml
+++ b/ResLifeToolkit/app/src/main/res/layout/general_form.xml
@@ -1,56 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:weightSum="1">
-
-    <TextView
-        android:id="@+id/formTimeTV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Form Time"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="24sp" />
-
-    <EditText
-        android:id="@+id/formBodyET"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.77"
-        android:ems="10"
-        android:gravity="top|left"
-        android:inputType="textMultiLine"
-        android:textAlignment="viewStart" />
+    android:layout_width="match_parent">
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:weightSum="1">
 
-        <Button
-            android:id="@+id/genFormSend"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/formTimeTV"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@android:color/holo_green_light"
-            android:text="Save" />
+            android:text="Form Time"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="24sp" />
 
-        <Button
-            android:id="@+id/genFormCancel"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/formBodyET"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@android:color/holo_orange_light"
-            android:text="Cancel" />
+            android:layout_weight="0.77"
+            android:ems="10"
+            android:gravity="top|left"
+            android:inputType="textMultiLine"
+            android:textAlignment="viewStart" />
 
-        <Button
-            android:id="@+id/genFormDelete"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@android:color/holo_red_light"
-            android:text="Delete" />
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/genFormSend"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@android:color/holo_green_light"
+                android:text="Save" />
+
+            <Button
+                android:id="@+id/genFormCancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@android:color/holo_orange_light"
+                android:text="Cancel" />
+
+            <Button
+                android:id="@+id/genFormDelete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@android:color/holo_red_light"
+                android:text="Delete" />
+        </LinearLayout>
+
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
