--- a/ResLifeToolkit/app/src/main/res/layout/general_form.xml
+++ b/ResLifeToolkit/app/src/main/res/layout/general_form.xml
@@ -13,7 +13,7 @@
             android:id="@+id/formTitleTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Tap to enter time."
+            android:text="Form Title"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="24sp" />
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="@android:color/holo_green_light"
-                android:onClick="saveLog"
+                android:onClick="saveLogEntry"
                 android:text="Save" />
 
             <Button
@@ -48,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="@android:color/holo_orange_light"
-                android:onClick="cancelLog"
+                android:onClick="cancelLogEntry"
                 android:text="Cancel" />
 
         </LinearLayout>
